# kolibry_dronbox

./: CMakeLists.txt  DOCUMENT.md  README.md  main.cpp
src/communication/: connection_manager.cpp  drone_comm.cpp  server_comm.cpp
src/lighting/: lighting_control.cpp
src/mechanisms/: actuator_control.cpp  positioning.cpp
src/monitoring/: equipment_monitor.cpp  telemetry.cpp
src/power/: battery_handler.cpp  charging_manager.cpp
src/sensors/: diagnostics.cpp  sensor_manager.cpp
src/utils/: config_loader.cpp  error_handler.cpp  logger.cpp
